[specs] Fix overflow issues with Jasmine reporter

--- a/spec/specs.sass
+++ b/spec/specs.sass
@@ -32,3 +32,11 @@ up-drawer-backdrop
 
 :focus-visible:not(.up-focus-hidden), .up-focus-visible
   outline: 5px solid royalblue !important
+
+.jasmine_html-reporter
+  padding: 0
+  margin: 0
+
+  .jasmine-banner
+    margin: 0
+    padding: 8px 4px
